syntax="proto3";
package micromango;
option go_package="micromango/pkg/grpc/activity";
import "share.proto";


service Activity {
  rpc Like(LikeRequest) returns (Empty);
  rpc Dislike(DislikeRequest) returns (Empty);
  rpc HasLike(HasLikeRequest) returns (HasLikeResponse);
  rpc RateManga(RateMangaRequest) returns (Empty);
  rpc UserRate(UserRateRequest) returns (UserRateResponse);
}

message LikeRequest {
  string mangaId = 1;
  string userId = 2;
}

message DislikeRequest {
  string mangaId = 1;
  string userId = 2;
}

message HasLikeRequest {
  string userId = 1;
  string mangaId = 2;
}

message HasLikeResponse {
  bool has = 1;
}

message RateMangaRequest {
  string userId = 1;
  string mangaId = 2;
  uint32 rate = 3;
}

message UserRateRequest {
  string userId = 1;
  string mangaId = 2;
}

message UserRateResponse {
  optional float rate = 1;
}